<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPD">

    <EditText
        android:id="@+id/editVD"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="300dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editVD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editND"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editND"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/puls"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxT"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="210dp"
        android:text="@string/tachycardia"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puls" />

    <Button
        android:id="@+id/btnSavePD"
        android:layout_width="380dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/btmsave"
        android:text="@string/btmSave"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxT" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="120dp"
        android:layout_marginBottom="635dp"
        android:background="#C0CCDA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/colorControlHighlight" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="353dp"
        android:layout_height="74dp"
        android:text="@string/nameTopPD"
        android:textAlignment="center"
        android:textColor="#0C0707"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />
</androidx.constraintlayout.widget.ConstraintLayout>